# tailorfish

./: .gitignore  README.md  pyproject.toml
src/tailorfish/: __init__.py  analysis.py  app.py  core.py  eval.py  student.py  tui.py
tests/: test_analysis.py  test_core.py
tests/fixtures/: blunder.pgn  missed_move.pgn  no-blunder.pgn
